feat(ops): add team for create host
