# swagger/ops.json
@@ -1017,6 +1017,44 @@
         }
       }
     },
+    "/api/ops/domains/port/{id}": {
+      "put": {
+        "security": [
+          {
+            "apiKey": []
+          }
+        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["domain"],
+        "summary": "更新domain的port",
+        "operationId": "domainUpdatePortApiOpsDomainsByPortid",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DomainUpdatePortReq"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/DomainUpdatePortResp"
+            }
+          }
+        }
+      }
+    },
     "/api/ops/domains/push": {
       "post": {
         "security": [
@@ -6136,6 +6174,118 @@
         }
       }
     },
+    "DomainUpdatePortReq": {
+      "type": "object",
+      "title": "DomainUpdatePortReq",
+      "required": ["port"],
+      "properties": {
+        "port": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "DomainUpdatePortResp": {
+      "type": "object",
+      "title": "DomainUpdatePortResp",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "data": {
+          "type": "object",
+          "properties": {
+            "CreatedAt": {
+              "type": "string"
+            },
+            "CreatedBy": {
+              "type": "string"
+            },
+            "UpdatedAt": {
+              "type": "string"
+            },
+            "UpdatedBy": {
+              "type": "string"
+            },
+            "certs": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/CertInfo"
+              }
+            },
+            "description": {
+              "type": "string"
+            },
+            "domainName": {
+              "type": "string"
+            },
+            "dueDays": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "dueDaysPersons": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DomainPersonInfo"
+              }
+            },
+            "dutyPersons": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DomainPersonInfo"
+              }
+            },
+            "dutyShifts": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/ShiftInfo"
+              }
+            },
+            "hostList": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DomainHostInfo"
+              }
+            },
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "isAuto": {
+              "type": "boolean",
+              "format": "boolean"
+            },
+            "isWaf": {
+              "type": "boolean",
+              "format": "boolean"
+            },
+            "lifeCycle": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            },
+            "port": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "pushPersons": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DomainPersonInfo"
+              }
+            },
+            "renewState": {
+              "type": "string"
+            }
+          }
+        },
+        "msg": {
+          "type": "string"
+        }
+      }
+    },
     "DomainUpdatePushPersonReq": {
       "type": "object",
       "title": "DomainUpdatePushPersonReq",
@@ -7582,7 +7732,8 @@
         "Instance",
         "Count",
         "NeedConfirm",
-        "TagList"
+        "TagList",
+        "TeamIds"
       ],
       "properties": {
         "AppUids": {
@@ -7644,6 +7795,13 @@
           "type": "array",
           "items": {
             "type": "string"
+          }
+        },
+        "TeamIds": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
           }
         }
       }
